responsiveWebApp: primeira alteracao para a versao responsiva

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<script type="text/javascript" src="scripts/bootstrap.bundle.js"></script>
 	<script type="text/javascript" src="scripts/bootstrap.bundle.min.js"></script>
+	<style type="text/css">
+		@media (max-width: 768px) {.main-l-side {padding: 0px 10px 0px 10px;}}
+		.l-line {background-color: red; height: 2px;}
+		.l-content-txt {font-size: 15px;}
+		.l-section {margin: 25px 0px 0px 0px;}
+		.ln-title {font-size: 20px; font-weight: bold; color: #777; margin-top:-12px;}
+		.rptg-title {font-size: 20px; color: #777;margin-top: 18px;}
+
+		.rodape {background-color: #444; padding: 10px 0px 10px 0px; margin-top: 20px; bottom: 0px;}
+		.rodape h4 {display: block; font-size: 15px; color: #fff; text-align: center; margin: none;}
+		/*Breakpoint Pedido*/
+		@media (max-width: 646px) { 
+			.main-r-side {padding: 0px;}
+			.main-l-side {padding: 0px 10px 0px 10px;}
+			.formul {padding: 10px 20px 0px 0px;} 
+			.text-b {font-size: 15px; width: 200px;}
+			.sect-title {font-size: 35px;}
+			.r-content1 h2 {font-size: 30px;}
+		}
+	</style>
 </head>
 
 <body>
